force-app/main/default/objects/Assessment_Session_Signal__c/Assessment_Session_Signal__c.object-meta.xml
<CustomObject>
    <label>Assessment Session Signal</label>
    <nameField>
        <displayFormat>ASI-{00000}</displayFormat>
        <label>Assessment Session Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Session Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>