force-app/main/default/objects/Assessment_Session_Signal__c/fields/Assessment_Definition_Signal__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition_Signal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Definition Signal</label>
    <referenceTo>Assessment_Definition_Signal__c</referenceTo>
    <relationshipLabel>Assessment Session Signals</relationshipLabel>
    <relationshipName>Assessment_Session_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>