force-app/main/default/objects/Assessment_Session_Signal__c/fields/Assessment_Session__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Session__c</fullName>
    <label>Assessment Session</label>
    <referenceTo>Assessment_Session__c</referenceTo>
    <relationshipLabel>Assessment Session Signals</relationshipLabel>
    <relationshipName>Assessment_Session_Signals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>