force-app/main/default/objects/Assessment_Session_Signal__c/fields/Trigger_Assessment_Definition_Item__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Assessment_Definition_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trigger Assessment Definition Item</label>
    <referenceTo>Assessment_Definition_Item__c</referenceTo>
    <relationshipLabel>Assessment Session Signals</relationshipLabel>
    <relationshipName>Assessment_Session_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>